ReSharper.FSharp/test/data/parsing/errors/Line separators 01.fs
module Module

[<Foo>] 
type T =
    class end 
